<resources>
    <string name="app_name">Test_BlueTooth</string>
    <string name="action_settings">Settings</string>
    <string name="title" translatable="false">Bt</string>
    <string name="logo" translatable="false">logo</string>

    <string name="Text">Status: -</string>
    <string name="on">Turn On</string>
    <string name="off">Turn Off</string>
    <string name="List">List paired Devices</string>
    <string name="Find">Search new Devices / Cancel</string>

</resources>
