<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.b_pachango.jm.prueba_bluetooth_1.BlueToothPrincipal">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:padding="10dp">

        <Button
            android:id="@+id/turnOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on"
            android:textColor="@color/colorAccent"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:nestedScrollingEnabled="false"
            android:onClick="on" />

        <Button
            android:id="@+id/turnOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/off"
            android:textColor="#020202"
            android:background="@color/colorPrimaryDark"
            android:padding="10dp"
            android:layout_marginLeft="50dp"
            android:onClick="off" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:padding="10dp">

        <Button
            android:id="@+id/paired"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/List"
            android:textColor="@color/textIcons"
            android:background="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:onClick="list" />

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Find"
            android:textColor="@color/textIcons"
            android:background="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:onClick="find" />

        <ListView
            android:id="@+id/listView1"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp">

        </ListView>

    </LinearLayout>





</RelativeLayout>
